apps/landingpage: Fix alignment of floating notifications on hero image

--- a/adhocracy-plus/assets/scss/components/landing_page.scss
+++ b/adhocracy-plus/assets/scss/components/landing_page.scss
@@ -65,11 +65,13 @@ $faq-bg: #f5f5f5;
         &:first-of-type {
             bottom: 10%;
             left: 0;
+            transform: translateX(-50%);
         }
 
         &:last-of-type {
             top: 20%;
             right: 0;
+            transform: translateX(40%);
         }
     }
 }
